<resources>
    <string name="app_name">Personal Restaurant Guide</string>
    <string name="map_key"></string>
    <string name="restaurant_details">Restaurant Details</string>
    <string name="address">Address:</string>
    <string name="description">Description:</string>
    <string name="name">Name:</string>
    <string name="phone">Phone:</string>
    <string name="rating">Rating:</string>
    <string name="tags">Tags:</string>
    <string name="get_directions">Get Directions</string>
    <string name="get_location">Get Location</string>
    <string name="facebook_application_button">facebook application button</string>
    <string name="twitter_application_button">twitter application button</string>
    <string name="mail_application_button">mail application button</string>
    <string name="title_activity_location">Map</string>
    <string name="title_activity_direction">Map</string>
    <string name="facebook_app_id">404803923975097</string>
</resources>